package dk.favrholdt.enums;

public enum DeliveryStatus {
    PENDING, IN_TRANSIT, DELIVERED
}
